--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,3 +7,22 @@
 body {
     font-family: 'Nunito', sans-serif;
 }
+
+.customScroll::-webkit-scrollbar {
+    width: 8px;
+}
+
+.customScroll::-webkit-scrollbar-thumb {
+    border-radius   : 5px;
+    background-color: #999;
+}
+
+.customScroll::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.customScroll::-webkit-scrollbar-track {
+    border-radius   : 5px;
+    border          : 1px solid #bbb;
+    background-color: #f8f8f8;
+}
